2011-10-21  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_output): When appending output to a variable,
	flatten the previous contents so we can append to a single
	string, or to deeply nested list, etc.

	* txr.1: Documented these new extensions to next and output.

2011-10-21  Kaz Kylheku  <kaz@kylheku.com>

	New features. Strling list output streams in stream
	library, allow output to be captured as a list of strings
	representing lines (in contrast to string streams which capture
	a single string).

	The output directive can output to a variable,
	and next can scan over a variable.

	* lib.c (span_str, compl_span_str, break_str): New functions.

	* lib.h (span_str, compl_span_str, break_str): New functions declared.

	* match.c (into_k, var_k): New keyword variables.
	(mf_file_data): New static function.
	(v_next): Refactored argument handling. Added support for :var
	keyword.
	(v_output): Added support for :into keyword.

	* stream.c (strlist_mark, strlist_out_put_string,
	strlist_out_put_char): New static functions.
	(strlist_out_ops): New static struct.
	(make_strlist_output_stream, get_list_from_stream): New functions.

	* stream.h (make_strlist_output_stream, get_list_from_stream): New
	functions declared.

2011-10-21  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (proper_plist_to_alist, improper_plist_to_alist): New
	functions.

	* lib.h (proper_plist_to_alist, improper_plist_to_alist): New
	functions declared.

	* match.c (append_k): New keyword symbol variable.
	(complex_open): New append argument.
	(v_output): Streamlined parsing of keywords.
	Support :append keyword.

	* txr.1: Output directive's keyword documentation revised.

2011-10-20  Kaz Kylheku  <kaz@kylheku.com>

	Bug #34609

	* match.c (v_block): Regression induced by rabid refactoring. Block
	must apply remaining directives to data, excluding itself, otherwise
	runaway recursion takes the place of correct behavior.

2011-10-19  Kaz Kylheku  <kaz@kylheku.com>

	Version 040
